# sdl-cmake-starter

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt
src/: CMakeLists.txt  main.c
